
plugins {
    id 'java'
    id 'org.javamodularity.moduleplugin' version '1.6.0'
}

version rootProject.version

sourceCompatibility = 12
targetCompatibility = 12

sourceSets {
    main {
        output.resourcesDir = file('build/bin')
        java.outputDir = file('build/bin')
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
    implementation group: 'com.electronwill.night-config', name: 'core', version: '3.6.0'
    implementation group: 'com.electronwill.night-config', name: 'toml', version: '3.6.0'
}
